[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/audio_display/AudioDisplay.tscn" type="PackedScene" id=1]
[ext_resource path="res://gfx/test.png" type="Texture" id=2]
[ext_resource path="res://scenes/gdtimer/GDTimer.gd" type="Script" id=3]
[ext_resource path="res://gfx/gui/bar.png" type="Texture" id=4]
[ext_resource path="res://audio/peggy_o_example.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 150 )

[node name="GDTimer" type="Node2D"]
script = ExtResource( 3 )

[node name="BlackBkg" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="SoundBkg" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 300.0
mouse_filter = 2
color = Color( 0.258824, 0.360784, 0.521569, 1 )

[node name="WavImage" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Bar" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false

[node name="AudioDisplay" parent="." instance=ExtResource( 1 )]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 512, 150 )
shape = SubResource( 1 )

[node name="WaveFile" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="move_wav" from="AudioDisplay" to="." method="_on_AudioDisplay_move_wav"]
[connection signal="play_song" from="AudioDisplay" to="." method="_on_AudioDisplay_play_song"]
[connection signal="stop_song" from="AudioDisplay" to="." method="_on_AudioDisplay_stop_song"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
